# pyride_nao

./: .cproject  .gitignore  .gitmodules  .project  README.md  annotated.html  classPyNAO-members.html  classPyNAO.html  classes.html  dir_019b709c6f78642debcf0a8e1d850afc.html  dir_3bdd366c61c312c028aa5c13956d6734.html  dir_49d819eca6148a5234d50e5e0f8549ff.html  dir_ea4253b4d3be88633f6ff0dedb1361af.html  functions.html  functions_func.html  index.html  mainpage.dox  pyride.dox
PyNaoServer/: .cproject  .project  AudioFeedbackStream.cpp  AudioFeedbackStream.h  CMakeLists.txt  NaoProxyManager.cpp  NaoProxyManager.h  PyModulePyCommon.cpp  PyNAOModule.cpp  PyNAOModule.h  PyNaoServer.cpp  PyNaoServer.h  main.cpp  qiproject.xml
libsrc/PyRideCore/: CMakeLists.txt  qiproject.xml
libsrc/ccrtp-1.7.2/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  ccrtp.list  ccrtp.spec  config.status  configure  libccrtp1.pc  libtool  qiproject.xml
libsrc/ccrtp-1.7.2/demo/: Makefile  Makefile.in
libsrc/ccrtp-1.7.2/doc/: Makefile  Makefile.in
libsrc/ccrtp-1.7.2/m4/: Makefile  Makefile.in
libsrc/ccrtp-1.7.2/phone/: Makefile  Makefile.in
libsrc/ccrtp-1.7.2/src/: Makefile  Makefile.in  config.h
libsrc/ccrtp-1.7.2/src/ccrtp/: Makefile  Makefile.in
libsrc/ccrtp-1.7.2/src/ccrtp/crypto/: Makefile  Makefile.in
libsrc/ccrtp-1.7.2/w32/: Makefile  Makefile.in
libsrc/celt-0.11.1/: CMakeLists.txt  Makefile  celt.pc  config.h  config.status  libcelt.spec  libtool  qiproject.xml
libsrc/celt-0.11.1/libcelt/: Makefile
libsrc/celt-0.11.1/tests/: Makefile
libsrc/celt-0.11.1/tools/: Makefile
libsrc/commoncpp2-1.8.1/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  commoncpp2.list  config.status  configure  libtool  qiproject.xml
libsrc/commoncpp2-1.8.1/demo/: Makefile  Makefile.in
libsrc/commoncpp2-1.8.1/doc/: Makefile  Makefile.in
libsrc/commoncpp2-1.8.1/inc/: Makefile  Makefile.in  config.tmp
libsrc/commoncpp2-1.8.1/inc/cc++/: Makefile  Makefile.in  config.h
libsrc/commoncpp2-1.8.1/m4/: Makefile  Makefile.in
libsrc/commoncpp2-1.8.1/src/: Makefile  Makefile.in  applog.cpp  ccgnu2-config  friends.cpp  libccext2.pc  libccgnu2.pc  process.cpp  thread.cpp
libsrc/commoncpp2-1.8.1/tests/: Makefile  Makefile.in
libsrc/commoncpp2-1.8.1/w32/: Makefile  Makefile.in
libsrc/commoncpp2-1.8.1/w32/vs2008/: Makefile  Makefile.in
libsrc/openssl/: CMakeLists.txt  qiproject.xml
libsrc/openssl/crypto/: CMakeLists.txt
libsrc/opus-1.1.2/: CMakeLists.txt  config.h  qiproject.xml
libsrc/opus-1.3.1/: CMakeLists.txt  config.h  qiproject.xml
libsrc/opus-1.3.1/src/: .opus_encoder.c.swp
scripts/: constants.py  messenger.py  py_main.py  tininfo.py  tinmind.py  tinstate.py
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  functions_1.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  search.js  searchdata.js
